Fix better scrollbar feature for newer versions of chrome and remove small option

--- a/src/extension/features/general/better-scrollbars/off.css
+++ b/src/extension/features/general/better-scrollbars/off.css
@@ -1,3 +1,9 @@
+@supports (scrollbar-width: none) {
+  * {
+    scrollbar-width: none;
+  }
+}
+
 ::-webkit-scrollbar {
   width: 0px;
 }
