--- a/src/extension/features/general/better-scrollbars/thin.css
+++ b/src/extension/features/general/better-scrollbars/thin.css
@@ -1,3 +1,10 @@
+@supports (scrollbar-width: thin) {
+  * {
+    scrollbar-width: thin;
+    scrollbar-color: rgba(0, 89, 111, 0.6);
+  }
+}
+
 ::-webkit-scrollbar {
   width: 2px;
 }
